cluster/infrastructure/redis/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: redis
    app.kubernetes.io/version: 8.10.2
  name: redis
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: redis
  template:
    metadata:
      labels:
        app.kubernetes.io/name: redis
        app.kubernetes.io/version: 8.10.2
    spec:
      automountServiceAccountToken: false
      containers:
      - image: redis:8.10.2
        name: redis
        ports:
        - containerPort: 6379
          name: redis
        volumeMounts:
        - mountPath: /data
          name: redis-volume
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 500m
            memory: 512Mi
      - args:
        - --redis.addr=redis://localhost:6379
        image: oliver006/redis_exporter:v1.91.1
        name: redis-exporter
        ports:
        - containerPort: 9121
          name: redis-exporter
        resources:
          requests:
            cpu: 10m
            memory: 16Mi
          limits:
            cpu: 100m
            memory: 64Mi
      volumes:
      - name: redis-volume
        persistentVolumeClaim:
          claimName: redis-pvc
