cluster/infrastructure/redis/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: redis
    app.kubernetes.io/version: 8.10.2
  name: redis
spec:
  selector:
    app.kubernetes.io/name: redis
  ports:
  - name: tcp-redis
    port: 6379
    targetPort: 6379
